Strings: added program to find first non repeating charecter